ChangeLog for Pylint
====================

--
    * New --msg-template option to control output, deprecating "msvc" and
      "parseable" output formats as well as killing `--include-ids` and `--symbols`
      options

    * Do not emit [fixme] for every line if the config value 'notes'
      is empty, but [fixme] is enabled.

    * Emit warnings about lines exceeding the column limit when
      those lines are inside multiline docstrings.

    * Do not double-check parameter names with the regex for parameters and
      inline variables.

    * Added a new warning missing-final-newline (C0304) for files missing
      the final newline.

    * Methods that are decorated as properties are now treated as attributes
      for the purposes of name checking.

    * Names of derived instance class member are not checked any more.

    * Names in global statements are now checked against the regular
      expression for constants.

    * For toplevel name assignment, the class name regex will be used if
      pylint can detect that value on the right-hand side is a class
      (like collections.namedtuple()).

    * Simplified invalid-name message

    * Added a new warning invalid-encoded-data (W0512) for files that
      contain data that cannot be decoded with the specified or
      default encoding.

    * New warning bad-open-mode (W1501) for calls to open (or file) that
      specify invalid open modes (Original implementation by Sasha Issayev).

    * New warning old-style-class (C1001) for classes that do not have any
      base class.

    * Add new name type 'class_attribute' for attributes defined
      in class scope. By default, allow both const and variable names.

    * New warning trailing-whitespace (C0303) that warns about
      trailing whitespace.

    * Added a new warning unpacking-in-except (W0712) about unpacking
      exceptions in handlers, which is unsupported in Python 3.

    * Add a configuration option for missing-docstring to