@@ -1,0 +1,3 @@
+E: 24: Catching an exception which doesn't inherit from BaseException: MyException
+E: 29: Catching an exception which doesn't inherit from BaseException: MyException
+E: 29: Catching an exception which doesn't inherit from BaseException: MySecondException
